#ifndef ACTIONTYPE_H
#define ACTIONTYPE_H

enum class ActionType {
    MOVE_FORWARD,
    MOVE_BACKWARD,
    ROTATE_LEFT_1_8,
    ROTATE_RIGHT_1_8,
    ROTATE_LEFT_1_4,
    ROTATE_RIGHT_1_4,
    SHOOT,
    NONE
};

#endif // ACTIONTYPE_H
